--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   provider: ^6.1.2
   carousel_slider: ^5.0.0
   smooth_page_indicator: ^1.2.0+3
+  http: ^1.2.2
 
 dev_dependencies:
   flutter_test:
